update dockerfile and docker compose add version in backend and frontend
